<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.actsat.alpal.actsatprep.sat_or_act"
    android:background="@color/bydgreen">

    <TextView
        android:id="@+id/whichTestLabel"
        android:text="@string/chooseTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/chooseACT"
        android:layout_below="@+id/whichTestLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseACT"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/bydorange"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/chooseSAT"
        android:layout_below="@id/chooseACT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseSAT"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/bydorange"
        android:textColor="@color/white"/>

</RelativeLayout>